--- a/Resources/Prototypes/_Backmen/Entities/Clothing/psionic_clothing.yml
+++ b/Resources/Prototypes/_Backmen/Entities/Clothing/psionic_clothing.yml
@@ -1,5 +1,5 @@
 ﻿- type: entity
-  parent: [ ClothingEyesBase, BasePsionicContraband ]
+  parent: ClothingEyesBase
   id: ClothingEyesTelegnosisSpectacles
   suffix: Псионика
   name: странные очки
@@ -17,7 +17,7 @@
 - type: entity
   id: BedsheetInvisibilityCloak
   suffix: Псионика
-  parent: [ BedsheetBase, BasePsionicContraband ]
+  parent: BedsheetBase
   name: рваная простыня
   description: Изодранная простыня, она выглядит так, словно прошла через ад и вернулась обратно.
   components:
@@ -30,7 +30,7 @@
     - type: Psionic
 
 - type: entity
-  parent: [ ClothingHandsBase, BasePsionicContraband ]
+  parent: ClothingHandsBase
   id: ClothingHandsDispelGloves
   suffix: Псионика
   name: лоскутные перчатки
@@ -49,7 +49,7 @@
     - type: Psionic
 
 - type: entity
-  parent: [ ClothingHandsBase, BasePsionicContraband ]
+  parent: ClothingHandsBase
   id: ClothingHandsGlovesColorYellowUnsulated
   suffix: Псионика
   name: изолированные перчатки
