--- a/Resources/Prototypes/_Backmen/Entities/Supermatter/supermatter.yml
+++ b/Resources/Prototypes/_Backmen/Entities/Supermatter/supermatter.yml
@@ -61,9 +61,9 @@
     color: "#ffe000"
   - type: Explosive
     explosionType: Supermatter
-    maxIntensity: 25000000
+    maxIntensity: 25000
     intensitySlope: 5
-    totalIntensity: 25000000
+    totalIntensity: 25000
   - type: GuideHelp
     guides:
     - Supermatter
