--- a/Resources/Prototypes/_Backmen/Loadouts/Jobs/Medical/virologist.yml
+++ b/Resources/Prototypes/_Backmen/Loadouts/Jobs/Medical/virologist.yml
@@ -13,17 +13,17 @@
 - type: loadout
   id: VirologistBackpack
   equipment:
-    back: ClothingBackpackVirology
+    back: ClothingBackpackMedical
 
 - type: loadout
   id: VirologistSatchel
   equipment:
-    back: ClothingBackpackSatchelVirology
+    back: ClothingBackpackSatchelMedical
 
 - type: loadout
   id: VirologistDuffel
   equipment:
-    back: ClothingBackpackDuffelVirology
+    back: ClothingBackpackDuffelMedical
 
 #OuterClothing
 - type: loadout
