--- a/Resources/Prototypes/_Backmen/Maps/Pool/backmenstandart.yml
+++ b/Resources/Prototypes/_Backmen/Maps/Pool/backmenstandart.yml
@@ -4,25 +4,7 @@
   - BackmenAspid
   - BackmenKettle
   - BackmenBox
-  - BackmenTortuga
-  - BackmenHive
   - BackmenShoukou
-  #- BackmenRook
+  - BackmenRook
   - BackmenDelta
-  #- CorvaxSplit
-  - Amber
-  - Bagel
-  - Convex
-  #- Core
-  - Elkridge
-  - Fland
-  #- Gate
-  - Loop
-  - Marathon
-  - Meta
-  - Oasis
-  - Omega
-  - Packed
-  - Plasma
-  #- Reach
   - BackmenTrain
